[project]
name = "conways-game-of-life"
authors = [
    { name = "Jaime Gonzalez Gomez", email = "jim.gomez.dnn@gmail.com" },
]
description = "CHANGEME"
urls = { Source = "https://github.com/Jtachan/Conways_GameOfLife.git" }
dependencies = [
    "pygame",
    "pybase-ext",
]
requires-python = ">=3.8"
license = { text = "MIT license" }
dynamic = ["readme", "version"]

# you can add CLI tools which should be installed when installing the package
# [project.scripts]
# cli-command = "game_of_life.module:function"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "game_of_life._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src", "unittests"]
