[project]
name = "conways-game-of-life"
authors = [
    { name = "Jaime Gonzalez Gomez", email = "jim.gomez.dnn@gmail.com" },
]
description = "CHANGEME"
urls = { Source = "https://github.com/Jtachan/Conways_GameOfLife.git" }
dependencies = [
    "pygame",
    "pybase-ext",
]
requires-python = ">=3.8"
license = { text = "MIT license" }
dynamic = ["readme", "version"]

[project.scripts]
game-of-life = "game_of_life.cli:launch_game"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "game_of_life._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
src_paths = ["src", "unittests"]
